# garmin-gcd-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: FORMAT.md
gcd_tool/: __init__.py  analyzer.py  cli.py  extractor.py  parser.py  walker.py
scripts/: check_safety.sh
src/: __init__.py
src/gcd_tool/: __init__.py  analyzer.py  cli.py  extractor.py  parser.py  walker.py
tests/: conftest.py  test_analyzer.py  test_extraction.py  test_header.py  test_walker.py
